// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard Bootstrap Component Snapshots should match snapshots for common 1`] = `
<div
  class="v-card v-sheet theme--light"
>
  <div
    class="v-card__title"
  >
    <h3
      class="grey--text"
    >
      
      a title
    
    </h3>
  </div>
   
  <hr
    class="v-divider theme--light"
  />
   
  <div
    class="v-card__text"
  >
    <div
      class="layout align-center justify-space-around wrap"
    >
      <div
        class="v-avatar primary"
        style="height: 100px; width: 100px;"
      >
        <i
          aria-hidden="true"
          class="v-icon icon icon-users theme--light white--text"
          style="font-size: 70px;"
        />
      </div>
       
      <span
        class="text-xs-center mt-3 grey--text"
      >
        
        a description
      
      </span>
    </div>
  </div>
   
  <div
    class="v-card__actions"
  >
    <div
      class="layout align-center justify-space-around wrap mb-2"
    >
      <router-link
        class="v-btn v-btn--round v-btn--router theme--light primary"
      >
        <div
          class="v-btn__content"
        >
          
        a button
      
        </div>
      </router-link>
    </div>
  </div>
</div>
`;

exports[`Dashboard Bootstrap Component Snapshots should match snapshots for disabled 1`] = `
<div
  class="v-card v-sheet theme--light"
>
  <div
    class="v-card__title"
  >
    <h3
      class="grey--text"
    >
      
      a title
    
    </h3>
  </div>
   
  <hr
    class="v-divider theme--light"
  />
   
  <div
    class="v-card__text"
  >
    <div
      class="layout align-center justify-space-around wrap"
    >
      <div
        class="v-avatar"
        style="height: 100px; width: 100px; background-color: rgba(0, 0, 0, 0.12);"
      >
        <i
          aria-hidden="true"
          class="v-icon icon icon-users theme--light white--text"
          style="font-size: 70px;"
        />
      </div>
       
      <span
        class="text-xs-center mt-3 grey--text"
      >
        
        a description
      
      </span>
    </div>
  </div>
   
  <div
    class="v-card__actions"
  >
    <div
      class="layout align-center justify-space-around wrap mb-2"
    >
      <button
        class="v-btn v-btn--disabled v-btn--round theme--light"
        disabled="disabled"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          
        a button
      
        </div>
      </button>
    </div>
  </div>
</div>
`;
